# secman

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  AWS.md  BOTH_EMAIL_FIXES_SUMMARY.md  CLAUDE.md  CLAUDE_DESKTOP_HOWTO.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOMAIN_NORMALIZATION_DECISION.md  DOMAIN_NORMALIZATION_PATTERNS.md  DOMAIN_NORMALIZATION_RESEARCH.md  E2E_TESTING_SUMMARY.md  EMAIL_FIXES_CHECKLIST.md  END_TO_END_TEST_PLAN.md  EXTENDED_RISK_ASSESSMENT_IMPLEMENTATION.md  FEATURE-009-IMPLEMENTATION-SUMMARY.md  FRONTEND_MIGRATION_EXAMPLE.md  GEMINI.md  HISTORY.md  INSTALL.md  MIGRATION_FROM_PLAY.md  MIGRATION_GUIDE.md  OAUTH_FIX_SUMMARY.md  OAUTH_LOCALHOST_FIX.md  PRODUCTION-QUICKSTART.md  README.md  README_EMAIL_FIX.md  SECURITY.md  SECURITY_REVIEW.md  SSE_vs_WebSocket_Research.md  STANDARD_VIEW_UPDATE.md  SUMMARY_OF_CHANGES.md  TEST_EXECUTION_STATUS.md  TRANSLATION_TESTING_GUIDE.md  VULNERABILITY_FEATURE_COMPLETE.md  build.gradle.kts  diagnose-requirements.sh  docker-compose.dev.yml  (+25 more)
src/helper/: CHANGELOG.md  CLAUDE.md  README.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
src/helper/src/: __init__.py
src/helper/src/cli/: args.py  env.py  main.py
src/helper/src/exporters/: csv_exporter.py  txt_exporter.py  xlsx_exporter.py
src/helper/src/lib/: error_handling.py  file_utils.py  logging_config.py
src/helper/src/models/: __init__.py  auth_context.py  (+6 more)
src/webdep/: README.md  pyproject.toml
src/webdep/tests/: test_discovery.py  test_validation.py  test_vulnerabilities.py
src/webdep/webdep/: __init__.py  cli.py  discovery.py  secman.py  validation.py  vulnerabilities.py
(+3164 files in other folders)
